k8s/06-task-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-service
  namespace: todo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task-service
  template:
    metadata:
      labels:
        app: task-service
    spec:
      containers:
        - name: task-service
          image: YOURUSER/task-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet: { path: /health, port: 5000 }
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet: { path: /health, port: 5000 }
            initialDelaySeconds: 15
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: task-service
  namespace: todo
spec:
  selector:
    app: task-service
  ports:
    - port: 5000
      targetPort: 5000
